fixed material before server load calls with defaulting.